fixed initial image on mobile, image aspect ratio in web visualArt

--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,12 @@
   height: 100%;
 }
 
+@media (max-width: 700px) {
+  .main .main-content .image {
+    object-fit: cover;
+  }
+}
+
 /* DISCOGRAPHY */
 .discography-main {
   display: flex;
@@ -372,7 +378,7 @@
 
 .image-big {
   max-height: 100%;
-  width: 100%;
+  /* width: 100%; */
   height: auto;
   cursor: zoom-in;
   overflow: hidden;
